Added nav bar to pages and changed icon css

--- a/css/-header.css
+++ b/css/-header.css
@@ -1,4 +1,4 @@
-.icon-cart {
+.cart-icon {
   position: relative;
 }
 
@@ -14,4 +14,5 @@
   position: absolute;
   top: 250px;
   left: 55px;
+  display: none;
 }
