--- a/css/-header.css
+++ b/css/-header.css
@@ -1,3 +1,48 @@
+header {
+  display: flex;
+  align-items: center;
+  padding: 0rem 1rem;
+  position: relative;
+  min-height: 80px;
+}
+
+header ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  text-transform: uppercase;
+  margin: 1rem 0rem;
+  align-items: center;
+  padding: 0;
+}
+
+header li {
+  padding: 2rem 2rem;
+}
+
+header .logo-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.logo {
+  width: 20%;
+}
+
+nav {
+  display: none;
+  min-height: 90vh;
+  width: 80%;
+  position: absolute;
+  background-color: var(--dark-blue);
+  right: 0;
+  top: 79px;
+  z-index: 1000;
+}
+
 .cart-icon {
   position: relative;
 }
@@ -14,5 +59,20 @@
   position: absolute;
   top: 250px;
   left: 55px;
+  display: none;
+}
+
+#hamburger-menu:checked ~ nav {
+  display: block;
+}
+
+.menu-icon {
+  font-size: var(--s);
+  position: absolute;
+  top: 30px;
+  right: 5%;
+}
+
+#hamburger-menu {
   display: none;
 }
