--- a/css/-home-page.css
+++ b/css/-home-page.css
@@ -12,11 +12,11 @@ h3 {
 
 #display-container {
   margin: auto;
-  padding: 3rem;
-  width: 1200px;
+  padding: 0.5rem 1rem;
+  width: 100%;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 4rem;
 }
 
