--- a/css/-home-page.css
+++ b/css/-home-page.css
@@ -23,13 +23,13 @@ h3 {
 .product-item {
   padding: 2rem 0;
   border: 1.5px solid var(--dark-blue);
-  border-radius: 0 30% 0 30%;
+  border-radius: 20%;
   background-color: var(--white);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.273);
 }
 
 .product-item:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
   transition: 0.5s ease;
 }
 
