--- a/css/-header.css
+++ b/css/-header.css
@@ -25,7 +25,7 @@ header li {
 header .logo-container {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .logo {
@@ -34,7 +34,7 @@ header .logo-container {
 
 nav {
   display: none;
-  min-height: 90vh;
+  min-height: 50vh;
   width: 80%;
   position: absolute;
   background-color: var(--dark-blue);
@@ -49,42 +49,28 @@ nav {
 
 #cart-amount {
   position: absolute;
-  top: 13px;
-  right: 35px;
+  top: 71%;
+  right: 42%;
   border-radius: 50%;
   text-align: center;
   font-size: 1.1rem;
 }
-
-/* #cart-icon {
-  position: relative;
-}
-
-.cart-amount {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: red;
-  color: var(--white);
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  position: absolute;
-  left: 55px;
-  display: block;
-} */
 
 #hamburger-menu:checked ~ nav {
   display: block;
 }
 
 .menu-icon {
-  font-size: var(--s);
+  font-size: 1.5rem;
   position: absolute;
-  top: 30px;
   right: 5%;
 }
 
 #hamburger-menu {
   display: none;
+}
+
+.site-name {
+  letter-spacing: 3px;
+  font-weight: 600;
 }
