--- a/css/-home-page.css
+++ b/css/-home-page.css
@@ -1,13 +1,50 @@
+.desktop {
+  display: none;
+}
+
+.home-banner > img {
+  width: 100%;
+  object-position: center;
+  object-fit: cover;
+  height: 50vh;
+}
+
+.home-banner img {
+  max-width: 100%;
+  position: relative;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.303);
+}
+
+.home-main {
+  margin-bottom: 3rem;
+}
+
 .home-main h1 {
+  position: absolute;
+  top: 5%;
+  color: rgb(4, 17, 59);
+  font-size: 2rem;
   text-align: center;
-  font-size: 3rem;
+  padding: 5rem 0;
+  text-transform: capitalize;
+  width: 100%;
+}
+
+.home-main h2 {
+  text-align: center;
+  font-size: 2rem;
   padding: 2rem 0;
 }
 
-h1,
-h2,
+.home-main h2,
 h3 {
   text-transform: uppercase;
+}
+
+.home-main h4 {
+  color: rgb(4, 17, 59);
+  font-size: 1.1rem;
+  font-weight: 800;
 }
 
 #display-container {
@@ -22,8 +59,7 @@ h3 {
 
 .product-item {
   padding: 2rem 0;
-  border: 1.5px solid var(--dark-blue);
-  border-radius: 20%;
+  border-radius: 10%;
   background-color: var(--white);
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.273);
 }
@@ -39,10 +75,42 @@ h3 {
 
 .product-item h2 {
   font-size: large;
-  font-weight: 700;
+  font-weight: 800;
+  color: rgb(4, 17, 59);
 }
 
 .product-price {
   font-size: medium;
   letter-spacing: 0.2rem;
+}
+
+.filter-container {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+#all,
+#female,
+#male {
+  color: var(--dark-blue);
+  background-color: var(--white);
+  border: 1px solid var(--dark-blue);
+  border-radius: 20px;
+  text-align: center;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  width: 75px;
+  text-transform: uppercase;
+  font-weight: 800;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.34);
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.34);
+}
+
+#all:hover,
+#female:hover,
+#male:hover {
+  cursor: pointer;
+  background-color: var(--dark-blue);
+  color: var(--white);
 }
