--- a/css/-media.css
+++ b/css/-media.css
@@ -1,16 +1,143 @@
 @media screen and (min-width: 30.07em) {
+  /* Header */
+  #cart-amount {
+    right: 45%;
+  }
 }
 
 @media screen and (min-width: 48.1em) {
+  /* Header */
+  header .logo-container {
+    gap: 4rem;
+  }
+
+  .site-name {
+    font-size: 1.5rem;
+  }
+
+  /* Footer */
+  .copyright-container img {
+    width: 20%;
+  }
+
   /* Home page */
+  .mobile {
+    display: none;
+  }
+
+  .desktop {
+    display: block;
+  }
+
+  .home-banner > img {
+    height: 65vh;
+  }
+
+  .home-main h2 {
+    font-size: 2.5rem;
+  }
+
   #display-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .filter-container {
+    gap: 3rem;
+  }
+
+  #all,
+  #female,
+  #male {
+    padding: 0.8rem;
+    margin-bottom: 1rem;
+    width: 100px;
+    font-size: 1rem;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.34);
+  }
+
+  /* About page */
+  .about-content {
+    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 20px;
+    max-width: 800px;
+  }
+
+  .about-cta-div {
+    margin-top: 2rem;
+  }
+
+  /* Product page */
+  #product-image {
+    display: flex;
+    justify-content: center;
+  }
+
+  .product-main img {
+    width: 70%;
+    border-radius: 10%;
+  }
+
+  .product-main h2,
+  #product-info p {
+    text-align: center;
+  }
+
+  #select-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 500px;
+    justify-content: center;
+    margin: auto;
+    padding-top: 2rem;
+  }
+
+  /* Checkout page */
+  .checkout-main img {
+    width: 50%;
+  }
+
+  #delete-button {
+    margin-right: 200px;
+    width: 50px;
+    height: 50px;
+    font-size: 1.4rem;
+  }
+
+  /* Purchase confirmation page */
+  .confirmation-container {
+    border-radius: 20px;
+    margin-bottom: 5rem;
+  }
+
+  #summary-content {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #summary-content h3 {
+    flex: 0 0 30%;
+  }
+
+  #summary-info {
+    flex: 0 0 40%;
+  }
+
+  #summary-image-container {
+    flex: 0 0 30%;
+  }
+
+  #summary-image {
+    width: 60%;
   }
 }
 
 @media screen and (min-width: 64em) {
   /* Header */
-
   header {
     justify-content: space-between;
   }
@@ -48,13 +175,76 @@
     border-bottom: 1px solid var(--white);
   }
 
+  #cart-amount {
+    top: 13px;
+    right: 35px;
+  }
+
   /* Home page */
   #display-container {
     margin: auto;
     padding: 3rem;
-    /*  width: 100%; */
     text-align: center;
     grid-template-columns: repeat(3, 1fr);
     gap: 4rem;
+  }
+
+  /* About page */
+  .about-content {
+    max-width: 1000px;
+  }
+
+  .p-content {
+    font-size: 1.3rem;
+    line-height: 2rem;
+  }
+
+  /* Product page */
+  .product-main h1 {
+    font-size: 2rem;
+  }
+
+  .product-main h2 {
+    font-size: 1.6rem;
+  }
+
+  #product-info p {
+    font-size: 1.3rem;
+    line-height: 2rem;
+  }
+
+  .product-main img {
+    width: 40%;
+  }
+
+  #select-container {
+    padding-top: 1rem;
+  }
+
+  /* Purchase confirmation page */
+  .confirmation-container {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* Footer */
+  .copyright-container img {
+    width: 15%;
+  }
+
+  .socials {
+    gap: 10rem;
+  }
+
+  .socials i {
+    font-size: 3rem;
+  }
+
+  .links {
+    gap: 3rem;
+    font-weight: 800;
+    font-size: 1.2rem;
+    padding: 3rem 0;
   }
 }
