--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,10 @@
 @import url(-header.css);
+@import url(-footer.css);
 @import url(-home-page.css);
+@import url(-about.css);
+@import url(-product.css);
+@import url(-checkout.css);
+@import url(-purchase-confirmation.css);
 @import url(-variables.css);
 @import url(-media.css);
 
@@ -24,8 +29,7 @@ footer {
   color: var(--white);
 }
 
-header a:after,
-footer a:after {
+header a:after {
   display: block;
   content: "";
   border-bottom: 1px solid var(--white);
@@ -34,8 +38,7 @@ footer a:after {
   transform-origin: 0% 50%;
 }
 
-header a:hover:after,
-footer a:hover:after {
+header a:hover:after {
   transform: scaleX(1);
 }
 
