--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 @import url(-footer.css);
 @import url(-home-page.css);
 @import url(-about.css);
+@import url(-contact.css);
 @import url(-product.css);
 @import url(-checkout.css);
 @import url(-purchase-confirmation.css);
