--- a/css/-checkout.css
+++ b/css/-checkout.css
@@ -115,3 +115,32 @@
   box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.273);
   align-self: flex-end;
 }
+
+.no-products {
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+#start-shopping-btn {
+  display: block;
+  width: 200px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  padding: 1rem;
+  text-transform: uppercase;
+  border: 1px solid var(--dark-blue);
+  border-radius: 20px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.273);
+  background-color: var(--white);
+  color: var(--dark-blue);
+  font-weight: 800;
+  font-size: 1.1rem;
+}
+
+#start-shopping-btn:hover {
+  background-color: rgb(4, 17, 59);
+  color: var(--white);
+  border: none;
+}
