--- a/css/-about.css
+++ b/css/-about.css
@@ -8,7 +8,7 @@
       rgba(255, 255, 255, 0.285),
       rgba(255, 255, 255, 0.285)
     ),
-    url(/images/about-image.jpg);
+    url(./images/about-image.jpg);
   margin: 0;
   height: 400px;
   background-repeat: no-repeat;
